# oopetris_wrapper_python

./: .gitignore  meson.build  pyproject.toml
.github/workflows/: ci.yml
scripts/: coverage.sh  lint.sh  mypy.sh  ruff.sh  test.sh
src/: convert.cpp  convert.hpp  meson.build  recordings.cpp  recordings.pyi  wrapper.cpp  wrapper.pyi
tests/: correct.py  raw_test.py  spec_test.py
